1 New project: a Javascript version of Turtle Blocks
  * basic block manipluation
  * basic block execution
  * expandable blocks working
  * cascading of expandable blocks
  * arithmetic functions (arg parsing)
  * setting expandable blocks on run (should be on load)
  * rotate turtle using easeljs rotation
  * implement actions (stacks)
  * implement boxes

TODO:
  * expanding arithmetic blocks
  * booleans
  * pen palette
  * sensors/media
  * decide on a palette strategy
  * implement more sophisticated blocks
  * add controls for rabbit vs turtle
  * add controls for clear
  * add controls for show/hide
  * coordinate grids
  * turtle skin
  * multiple turtles